--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  const socket = io();
+	const socket = io();
 
-
-	socket.on("hello", console.log)
+	socket.on("hello", console.log);
 </script>
